Check flag sso & chỉnh css màn cấu hình, quản lý người dùng

--- a/src/app/main/contract-template/contract-template.component.scss
+++ b/src/app/main/contract-template/contract-template.component.scss
@@ -116,11 +116,16 @@
     box-shadow: none !important;
     height: 33px;
     width: 50%;
+    font-weight: 500;
+    background-color: #F6F6F6;
+    color: var(--Text-Secondary, #8E9AB0);
+    border: 0px;
   }
   .p-selectbutton .p-button.p-highlight {
-    background: #c5ebff;
-    border-color: #c5ebff;
-    color: #106DB6;
+    background: #FFFFFF;
+    border-color: #FFFFFF;
+    color: #001A4D;
+    font-weight: 600;
   }
 
   .p-dropdown {
