--- a/src/app/main/customer/customer.component.html
+++ b/src/app/main/customer/customer.component.html
@@ -8,7 +8,7 @@
   </p-selectButton>
 <div class="col-md-12" style="padding-top: 20px;">
   <div class="input-line search" style="justify-content:left; border: none; background-color: #F1F5FE;">
-      <img src="../../assets/img/icon_search.svg" class="input-img" />
+      <!-- <img src="../../assets/img/icon_search.svg" class="input-img" /> -->
       <input type="text" id="filter_name" [value]="filter_name" class="input-text" style=" width: 90%!important"
       placeholder="{{getPlaceholderFind() | translate}}" (keyup)="autoSearch($event)" />
   </div>
