--- a/src/app/main/customer/customer.component.scss
+++ b/src/app/main/customer/customer.component.scss
@@ -81,9 +81,16 @@
     color: #5e5e5e;
   }
   .search{
-    border: 1px solid #106DB6;
-    border-radius: 15px;
+    border: 0.5px solid #F1F5FE;
+    margin: 0px;
+    width: 100%;
     height: 38px;
+    outline:0px;
+    background-color: #F1F5FE;
+    padding: 10px 16px 10px 16px;
+    opacity: 0px;
+    border-radius: 8px;
+    font-weight: 400;
   }
   .input-line {
     display: flex;
