--- a/src/app/main/digital-certificate/digital-certificate.component.html
+++ b/src/app/main/digital-certificate/digital-certificate.component.html
@@ -1,18 +1,18 @@
 <div *ngIf="isQLDSCTS_01 || isQLDSCTS_02 || isQLDSCTS_03 || isQLDSCTS_04" class="container-fluid">
   <div class="row">
-    <div class="col-md-3" *ngIf="isQLDSCTS_04">
+    <div class="col-xxl-4 col-md-3" *ngIf="isQLDSCTS_04">
       <div>{{'notation' | translate}}</div>
       <div class="input-line">
         <input type="text" [(ngModel)]="serial_number" class="input_text"/>
       </div>
     </div>
-    <div class="col-md-3" *ngIf="isQLDSCTS_04">
+    <div class="col-xxl-4 col-md-3" *ngIf="isQLDSCTS_04">
       <div>{{'subject' | translate}}</div>
       <div class="input-line">
         <input type="text" [(ngModel)]="subject" class="input_text"/>
       </div>
     </div>
-    <div class="col-md-3" *ngIf="isQLDSCTS_04">
+    <div class="col-xxl-4 col-md-3" *ngIf="isQLDSCTS_04">
       <div>{{'contract.status' | translate}}</div>
       <div>
           <p-treeSelect placeholder="{{'all' | translate}}"
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <div class="col-md-3 btn_search">
+    <div class="col-xxl-2 btn_search">
       <button *ngIf="isQLDSCTS_04" class="btn btn-lg btn-block btn_search1" (click)="getFirstPageSearchData()">{{'btn.search' | translate }}</button>
         <button *ngIf="isQLDSCTS_01" class="btn btn-lg btn-block btn_submit" (click)="addUnit()">{{'btn.add' | translate }}</button>
     </div>
