--- a/src/app/main/role/role.component.html
+++ b/src/app/main/role/role.component.html
@@ -1,18 +1,18 @@
 <div *ngIf="isQLVT_01 || isQLVT_02 || isQLVT_03 || isQLVT_04 || isQLVT_05" class="container-fluid">
   <div class="row">
-    <div class="col-md-3" *ngIf="isQLVT_04">
+    <div class="col-xxl-5 col-md-3" *ngIf="isQLVT_04">
       <div>{{'role.name' | translate}}</div>
       <div class="input-line">
           <input type="text" [(ngModel)]="name" class="input_text"/>
       </div>
     </div>
-    <div class="col-md-3" *ngIf="isQLVT_04">
+    <div class="col-xxl-5 col-md-3" *ngIf="isQLVT_04">
       <div>{{'role.code' | translate}}</div>
       <div class="input-line">
           <input type="text" [(ngModel)]="code" class="input_text"/>
       </div>
     </div>
-    <div class="col-md-6 btn_search">
+    <div class="col-xxl-2 btn_search">
       <button *ngIf="isQLVT_04" class="btn btn-lg btn-block btn_submit_search" (click)="searchRole()">{{'btn.search' | translate }}</button>
       <button *ngIf="isQLVT_01" class="btn btn-lg btn-block btn_submit" (click)="addRole()">{{'btn.add' | translate }}</button>
     </div>
