--- a/src/app/main/unit/unit.component.html
+++ b/src/app/main/unit/unit.component.html
@@ -1,24 +1,24 @@
 <div *ngIf="isQLTC_01 || isQLTC_02 || isQLTC_03 || isQLTC_04" class="container-fluid">
   <div class="row">
-    <div class="col-md-3" *ngIf="isQLTC_03">
+    <div class="col-xxl-5 col-md-3" *ngIf="isQLTC_03">
       <!-- <div>{{'unit.code' | translate}}</div> -->
       <div class="input-line">
         <input type="text" [(ngModel)]="code" class="input_text" placeholder="Nhập mã tổ chức"/>
       </div>
     </div>
-    <div class="col-md-3" *ngIf="isQLTC_03">
+    <div class="col-xxl-5 col-md-3" *ngIf="isQLTC_03">
       <!-- <div>{{'unit.name' | translate}}</div> -->
       <div class="input-line">
         <input type="text" [(ngModel)]="name" class="input_text" placeholder="Nhập tên tổ chức"/>
       </div>
     </div>
-    <div class="col-md-6 btn_search">
+    <div class="col-xxl-2 btn_search">
       <button *ngIf="isQLTC_03" class="btn btn-lg btn-block btn_submit btn_submit_search" (click)="searchUnit()">{{'btn.search' | translate }}</button>
       <button *ngIf="isQLTC_01" class="btn btn-lg btn-block btn_submit btn_submit_add" (click)="addUnit()">{{'btn.add' | translate }}</button>
     </div>
   </div>
 
-  <div class="row" style="padding-top: 5px;">
+  <div class="row" style="padding-top: 15px;">
     <div class="col-md-6">
     </div>
     <div class="col-md-6 btn_search" style="padding-left: 22px">
