--- a/src/app/main/unit/unit.component.scss
+++ b/src/app/main/unit/unit.component.scss
@@ -24,7 +24,7 @@
   color: #001A4D;
   background-color: #FFFFFF;
   font-size: 13px;
-  margin: 0 8px;
+  margin: 0px 0px;
   box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
   font-style: normal;
   line-height: normal;
@@ -40,7 +40,7 @@
   color: white;
   background-color: #0041C4;
   font-size: 13px;
-  margin: 0 10px;
+  margin: 0 20px;
   line-height: normal;
   font-style: normal;
   font-weight: 600;
@@ -189,6 +189,24 @@ input[type="file"] {
   padding: 8px 16px;
   text-align: right;
 } 
+
+@media (min-width: 1400px) {
+  .col-xxl-5 {
+      flex: 0 0 auto;
+      width: 40%;
+  }
+  
+  .col-xxl-2{
+    flex: 0 0 auto;
+    width: 20%;
+  }
+  
+  .col-xxl-1 {
+    flex: 0 0 auto;
+    width: 10%;
+}
+
+}
 
 @media screen and (min-width: 1224px) and (max-width:1280px){
   .custom-file-upload {
