--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -95,7 +95,7 @@
               </div>
 
               <div class="form-group" *ngIf="captcha" style="padding-bottom: 15px;">
-                <label>Captcha</label>
+                <label style="color: #FFFFFF;">Captcha</label>
                 <div id="preview" class="preview" #previewCaptcha></div>
                 <div class="input-line">
                   <input formControlName="captchaName" class="input-captcha" type="text" placeholder="{{'enter.captcha' | translate}}"/>
@@ -136,7 +136,7 @@
                 >
               </div> -->
             </form>
-            <div class="form-signin" style="padding-bottom: 15px;">
+            <div *ngIf="!isNB" class="form-signin" style="padding-bottom: 15px;">
               <div class="form-group">
                 <div class="login_methods__title">
                   <div class="login_methods__title1"></div>
@@ -273,7 +273,7 @@
             </div>
 
             <div class="form-group" *ngIf="captcha" style="padding-bottom: 15px;">
-              <label>Captcha</label>
+              <label style="color: #FFFFFF;">Captcha</label>
               <div id="preview" class="preview" #previewCaptcha></div>
               <div class="input-line">
                 <input formControlName="captchaName" class="input-captcha" type="text" placeholder="{{'enter.captcha' | translate}}"/>
@@ -315,7 +315,7 @@
             </div> -->
           </form>
           
-          <div class="form-signin" style="padding-bottom: 15px;">
+          <div *ngIf="!isNB" class="form-signin" style="padding-bottom: 15px;">
             <div class="form-group">
               <div class="login_methods__title">
                 <div class="login_methods_mobile__title1"></div>
