--- a/src/app/main/dialog/account-link-dialog/account-link-dialog.component.scss
+++ b/src/app/main/dialog/account-link-dialog/account-link-dialog.component.scss
@@ -32,7 +32,7 @@
       // width: 104px;
       // height: 38px;
       // border-radius: 6px;
-      background-color: #106DB6;
+      background-color: #0041C4;
       color: #FFFFFF;
       margin: 5px;
     }
