--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -53,7 +53,7 @@
           </div>
           <div class="col-md-1"></div>
       </div>
-      <div style="min-height: 60vh">
+      <div *ngIf="pageTotal > 0" style="min-height: 60vh">
         <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
           <div class="row">
             <!--Cột 1-->
@@ -210,7 +210,7 @@
           </div>
         </div>
       </div>
-      <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+      <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
           <div style="display: table-cell;vertical-align: middle;">
               <img src="../../../assets/img/empty_data.svg" />
               <div style="color: #94A7C6">{{'no.data' | translate}}</div>
@@ -300,7 +300,7 @@
             <div class="col-md-1"></div>
         </div>
 
-        <div style="min-height: 65vh">
+        <div *ngIf="pageTotal > 0" style="min-height: 65vh">
           <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
 
             <div class="row">
@@ -459,7 +459,7 @@
           </div>
         </div>
 
-        <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+        <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
             <div style="display: table-cell;vertical-align: middle;">
                 <img src="../../../assets/img/empty_data.svg" />
                 <div style="color: #94A7C6">{{'no.data' | translate}}</div>
@@ -538,7 +538,7 @@
           <div class="col-md-1"></div>
       </div>
 
-      <div style="min-height: 65vh">
+      <div *ngIf="pageTotal > 0" style="min-height: 65vh">
         <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
             <div class="row">
                 <!--Cột 1-->
@@ -647,7 +647,7 @@
             </div>
         </div>
       </div>
-      <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+      <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
           <div style="display: table-cell;vertical-align: middle;">
               <img src="../../../assets/img/empty_data.svg" />
               <div style="color: #94A7C6">{{'no.data' | translate}}</div>
@@ -721,7 +721,7 @@
             </div>
             <div class="col-md-1"></div>
         </div>
-        <div style="min-height: 65vh">
+        <div *ngIf="pageTotal > 0" style="min-height: 65vh">
           <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
             <div class="row">
                 <!--Cột 1-->
@@ -877,7 +877,7 @@
             </div>
           </div>
         </div>
-        <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+        <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
             <div style="display: table-cell;vertical-align: middle;">
                 <img src="../../../assets/img/empty_data.svg" />
                 <div style="color: #94A7C6">{{'no.data' | translate}}</div>
@@ -964,7 +964,7 @@
               </div>
               <div class="col-md-1"></div>
           </div>
-          <div style="min-height: 65vh">
+          <div *ngIf="pageTotal > 0" style="min-height: 65vh">
             <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: pageDownload, currentPage:p, totalItems: pageTotal}">
                 <div class="row">
                   <!--Cột 1-->
@@ -1073,7 +1073,7 @@
                 </div>
             </div>
           </div>
-          <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+          <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
               <div style="display: table-cell;vertical-align: middle;">
                   <img src="../../../assets/img/empty_data.svg" />
                   <div style="color: #94A7C6">{{'no.data' | translate}}</div>
@@ -1153,7 +1153,7 @@
               </div>
               <div class="col-md-1"></div>
           </div>
-          <div style="min-height: 65vh">
+          <div *ngIf="pageTotal > 0" style="min-height: 65vh">
             <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: pageDownload, currentPage:p, totalItems: pageTotal}">
                 <div class="row">
 
@@ -1258,7 +1258,7 @@
                 </div>
               </div>
             </div>
-            <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+            <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
                 <div style="display: table-cell;vertical-align: middle;">
                     <img src="../../../assets/img/empty_data.svg" />
                     <div style="color: #94A7C6">{{'no.data' | translate}}</div>
@@ -1329,7 +1329,7 @@
             </div>
             <div class="col-md-1"></div>
         </div>
-        <div style="min-height: 65vh">
+        <div *ngIf="pageTotal > 0" style="min-height: 65vh">
           <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: pageDownload, currentPage:p, totalItems: pageTotal}">
               <div class="row">
                   <!--Cột 1-->
@@ -1437,7 +1437,7 @@
               </div>
             </div>
           </div>
-          <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+          <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
               <div style="display: table-cell;vertical-align: middle;">
                   <img src="../../../assets/img/empty_data.svg" />
                   <div style="color: #94A7C6">{{'no.data' | translate}}</div>
