sua css dashboard & man tao HD

--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -12,7 +12,7 @@
 }
 
 .item_contract:hover{
-  background-color: rgb(255, 254, 254);
+  // background-color: rgb(255, 254, 254);
   box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
 }
 
@@ -26,7 +26,7 @@
 
 
 .item_contract_infor{
-  color: #666666;
+  color: #8E9AB0;
 }
 
 .item_contract_created{
