--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -100,7 +100,7 @@
                   <div class="number_header_card">{{numberExpire}}</div>
                   <div style="justify-content: center; display: flex;">
                     <img src="../../../assets/img/Ellipse_yellow.svg" width="12px"/>
-                    <div style="color: #A5AEC0; margin-left: 2%;">{{'contract.status.expire' | translate}}</div>
+                    <div style="color: #A5AEC0; margin-left: 2%;">{{'contract.status.wait-response' | translate}}</div>
                   </div>
                 </div>
               </a>
@@ -112,7 +112,7 @@
                 <div class="text_header_card">
                   <div class="number_header_card">{{numberExpire}}</div>
                   <div style="justify-content: center; display: flex;">
-                    <img src="../../../assets/img/Ellipse_yellow.svg" width="12px"/>
+                    <img src="../../../assets/img/Ellipse_orange.svg" width="12px"/>
                     <div style="color: #A5AEC0; margin-left: 2%;">{{'contract.status.expire' | translate}}</div>
                   </div>
                 </div>
@@ -138,12 +138,12 @@
 
     <div class="col-xxl-6 col-md-6" style="padding-left: 24px;">
       <div class="contract-request">
-        <div class="row_text_1">
+        <div class="row_text_1" style="padding-bottom: 10px;">
           <span style="color: #001A4D; font-weight: 600; font-size: 14px;">{{'request.process' | translate}}</span>
           <span style="color: #0041C4; cursor: pointer;"><b (click)="openLink('/main/c/receive/wait-processing')">Xem tất cả</b></span>
         </div>
         <!-- <br> -->
-        <div class="row_text_2" *ngFor="let item of contractRequestList; let i = index" [style.border-bottom]="i != listNotification.length-1 ? '1px solid #C7D0E9' : ''" style="padding: 4px; margin: 13px;">
+        <div class="row_text_2" *ngFor="let item of contractRequestList; let i = index" [style.border-bottom]="i != listNotification.length-1 ? '1px solid #C7D0E9' : ''" style="padding: 4px;margin-bottom: 16px;">
           <div>
             <img src="../../assets/img/frame_contract.svg">
           </div>
@@ -168,8 +168,8 @@
                 </div>
               </div>
               </a>
+            </div>
           </div>
-        </div>
         <br>
       </div>
     </div>
