--- a/src/app/main/contract-folder/contract-folder.component.scss
+++ b/src/app/main/contract-folder/contract-folder.component.scss
@@ -42,10 +42,16 @@
   }
 }
 
+.container-fluid-bg{
+  background-color: #FFFFFF;
+  border-radius: 12px;
+  min-height: 86vh;
+}
+
 .btn_submit{
     border: 0px;
     border-radius: 5px;
-    height: 37px;
+    height: 35px;
     box-sizing: border-box;
     color: white;
     background-color: #0041C4;
@@ -65,22 +71,28 @@
 }
 
 .search{
-  border: 1px solid #106DB6;
-  border-radius: 15px;
+  // border: 1px solid #106DB6;
+  // border-radius: 15px;
   height: 38px;
 }
 
 .input-line {
   display: flex;
-  // justify-content: space-between;
+  justify-content: space-between;
   position: relative;
 }
 
 .input-text {
-  border: 0;
-  padding: 10px;
-  width: 93%;
+  border: 0.5px solid #F1F5FE;
+  margin: 0px;
+  width: 100%;
+  height: 38px;
   outline:0px;
+  background-color: #F1F5FE;
+  padding: 10px 16px 10px 16px;
+  opacity: 0px;
+  border-radius: 8px;
+  font-weight: 400;
 }
 
 .input-img {
@@ -330,7 +342,7 @@
 .pagination a:hover:not(.active) {background-color: #ddd;}
 
 .contract_footer {
-  padding-top: 10px;
+  padding-top: 20px;
   display: flex;
   justify-content: space-between;
 }
