--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -228,7 +228,7 @@
                     
                     <!--Trang thai hop dong-->
                     <div class="col-md-2 calendar_create">
-                      <div class="item_contract_infor">
+                      <div class="item_contract_status">
                         <!-- <span class="status_blue">{{this.filter_status | pipe | translate}}
                           {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                           translate}}</span> -->
@@ -359,7 +359,7 @@
                   
                   <!--Trang thai hop dong-->
                   <div class="col-md-2 calendar_create">
-                    <div class="item_contract_infor">
+                    <div class="item_contract_status">
                       <span class="status_blue">{{item.status | pipe | translate}}</span>
                     </div>
                   </div>
@@ -505,7 +505,7 @@
                     
                     <!--Trang thai hop dong-->
                     <div class="col-md-2 calendar_create">
-                      <div class="item_contract_infor">
+                      <div class="item_contract_status">
                         <!-- <span class="status_blue">{{this.filter_status | pipe | translate}}
                           {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                           translate}}</span> -->
@@ -677,7 +677,7 @@
                     
                     <!--Trang thai hop dong-->
                     <div class="col-md-2 calendar_create">
-                      <div class="item_contract_infor">
+                      <div class="item_contract_status">
                         <!-- <span class="status_blue">{{this.filter_status | pipe | translate}}
                           {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                           translate}}</span> -->
@@ -914,7 +914,7 @@
                     
                     <!--Trang thai hop dong-->
                     <div class="col-md-2 calendar_create">
-                      <div class="item_contract_infor">
+                      <div class="item_contract_status">
                         <!-- <span class="status_blue">{{this.filter_status | pipe | translate}}
                           {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                           translate}}</span> -->
