sửa bố cục sidebar button tạo thẳng hàng với menu

--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -39,7 +39,7 @@
             <span *ngIf="menu.type === 'button'" (click)="clickLink(menu)" class="sub_title_add">
               <a style="color: white" [routerLink]="menu.href">
               <button class="btn_add_contract">{{menu.title | translate}}
-                <img src="../../assets/img/add-square.svg"/>
+                <img class="img_btn_add_contract_icon" src="../../assets/img/add-square.svg"/>
                 <!-- <span class="icon_add">
                   
                 </span> -->
