--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
@@ -30,16 +30,18 @@
   color: #EE7200;
   background-color: #FFFFFF;
   margin: 5px 5px;
+  height: 40px;
 }
 
 .find-infor-box-btn {
   width: fit-content;
   height: 30px;
   border-radius: 7px;
-  border: 1px solid #2674B0;
-  color: #2674B0;
+  border: 1px solid #0041C4;
+  color: #0041C4;
   background-color: #FFFFFF;
   margin: 5px 5px;
+  height: 40px;
 }
 
 .footer-contract {
