--- a/src/app/main/contract-template/contract-template.component.scss
+++ b/src/app/main/contract-template/contract-template.component.scss
@@ -1,9 +1,10 @@
 .item_contract {
-  border: 1px solid #106DB6;
-  border-radius: 10px;
+  border: 0.5px solid rgba(0, 65, 196, 0.10);
+  border-radius: 8px;
   padding: 8px;
-  margin-top: 10px;
-  line-height: 24px;
+  margin-top: 5px;
+  line-height: 21px;
+  margin-top: 8px;
 }
 
 .container-fluid{
@@ -13,8 +14,8 @@
 }
 
 .item_contract:hover{
-  background-color: rgb(255, 254, 254);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
+  border: 1px solid #C3D7FF;
 }
 
 .item_contract_name {
@@ -208,7 +209,7 @@
   color: white;
   background-color: #0041C4;
   font-size: 13px;
-  margin: 0 10px;
+  margin: 0 24px;
   font-style: normal;
   font-weight: 700;
 }
@@ -221,7 +222,7 @@
   color: #001A4D;
   background-color: #FFFFFF;
   font-size: 13px;
-  margin: 0 10px;
+  // margin: 0 10px;
   box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
   font-style: normal;
   font-weight: 700;
@@ -267,4 +268,22 @@
 
 .enterPage p {
   margin-top: 2px
+}
+
+@media (min-width: 1400px) {
+  .col-xxl-9 {
+    flex: 0 0 auto;
+    width: 80%;
+  }
+  
+  .col-xxl-3 {
+    flex: 0 0 auto;
+    width: 40%;
+}
+  
+  .col-xxl-1 {
+    flex: 0 0 auto;
+    width: 6.3333333333%;
+  }
+  
 }
